<resources>
    <string name="app_name">Portal UPI Apps</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Berita</string>
    <string name="menu_gallery">Pengumuman</string>
    <string name="menu_slideshow">Berkas</string>
    <string name="menu_tools">Kegiatan</string>
    <string name="menu_share">Blog</string>
    <string name="menu_send">Galeri</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
