<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_berita"
            android:icon="@drawable/ic_berita"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pengumuman"
            android:icon="@drawable/ic_pengumuman"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_berkas"
            android:icon="@drawable/ic_berkas"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_kegiatan"
            android:icon="@drawable/ic_kegiatan"
            android:title="@string/menu_tools" />

        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_blog"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_galeri"
            android:icon="@drawable/ic_galeri"
            android:title="@string/menu_send" />
    </group>

</menu>
